--- a/Lornworld2/Assets/UI/Inventory/Inventory.uss
+++ b/Lornworld2/Assets/UI/Inventory/Inventory.uss
@@ -2,15 +2,15 @@
     flex-grow: 1;
     align-items: flex-start;
     justify-content: center;
-    width: 50%;
-    height: 75%;
-    max-width: 50%;
-    max-height: 75%;
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
     background-color: rgb(43, 43, 43);
+    width: 80%;
+    max-width: 80%;
+    max-height: 75%;
+    height: 75%;
 }
 
 .panel {
@@ -27,7 +27,69 @@
 
 .slot-container {
     flex-grow: 1;
+    justify-content: center;
+    width: 100%;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.inventory-slot {
+    width: 128px;
+    height: 128px;
+    margin: 5px;
+    border-left-color: rgb(48, 48, 48);
+    border-right-color: rgb(48, 48, 48);
+    border-top-color: rgb(48, 48, 48);
+    border-bottom-color: rgb(48, 48, 48);
+    background-color: rgb(9, 19, 21);
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    max-width: 128px;
+    max-height: 128px;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+}
+
+.slot-icon {
+    padding: 15px;
+    flex-shrink: 0;
+    flex-grow: 1;
+    width: 100%;
+    max-width: 100%;
+    flex-wrap: nowrap;
+}
+
+.inventory-row {
+    height: 128px;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
+.hotbar-row {
+    width: 100%;
+    align-items: flex-end;
+    justify-content: center;
+    flex-direction: row;
+    height: auto;
+    margin-top: auto;
+    flex-shrink: 0;
+    flex-grow: 1;
+    align-content: flex-start;
+}
+
+.inventory-row-container {
+    flex-grow: 1;
+    flex-shrink: 0;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
 }
