Build hotbar UI and implement basic view logic

--- a/Lornworld2/Assets/UI/Inventory/Inventory.uss
+++ b/Lornworld2/Assets/UI/Inventory/Inventory.uss
@@ -97,3 +97,11 @@
 .stack-size-label {
     color: white;
 }
+
+.hotbar-container {
+    flex-grow: 1;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+    justify-content: center;
+}
