Indicate selected hotbar slot with border

--- a/Lornworld2/Assets/UI/Inventory/Inventory.uss
+++ b/Lornworld2/Assets/UI/Inventory/Inventory.uss
@@ -105,3 +105,8 @@
     align-items: flex-end;
     justify-content: center;
 }
+
+.hotbar-selected-slot {
+    border-color: white;
+    border-width: 5;
+}
