--- a/Lornworld2/Assets/UI/Inventory/CraftingMenu.uxml
+++ b/Lornworld2/Assets/UI/Inventory/CraftingMenu.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Inventory/Inventory.uss?fileID=7433441132597879392&amp;guid=eedb7afe2cbadb24b89e9d7958849d45&amp;type=3#Inventory" />
-    <ui:VisualElement name="Panel" class="panel" style="display: none;">
+    <ui:VisualElement name="Panel" class="panel" style="display: flex;">
         <ui:VisualElement name="CraftingMenu" class="inventory" style="flex-grow: 1;">
             <ui:Label text="Crafting" class="label" />
             <ui:ScrollView name="RecipeContainer" style="margin-bottom: auto; width: 100%;">
