Add armor slots to inventory UI

--- a/Lornworld2/Assets/UI/Inventory/Inventory.uxml
+++ b/Lornworld2/Assets/UI/Inventory/Inventory.uxml
@@ -1,54 +1,62 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Inventory/Inventory.uss?fileID=7433441132597879392&amp;guid=eedb7afe2cbadb24b89e9d7958849d45&amp;type=3#Inventory" />
-    <ui:VisualElement name="Panel" class="panel" style="display: none;">
+    <ui:VisualElement name="Panel" class="panel" style="display: flex;">
         <ui:VisualElement name="Inventory" class="inventory">
             <ui:Label text="Inventory" class="label" />
-            <ui:VisualElement name="SlotContainer" class="slot-container">
-                <ui:VisualElement name="InventoryRowContainer" class="inventory-row-container">
-                    <ui:VisualElement name="InventoryRow" class="inventory-row">
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                    </ui:VisualElement>
-                    <ui:VisualElement name="InventoryRow" class="inventory-row">
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                    </ui:VisualElement>
-                    <ui:VisualElement name="InventoryRow" class="inventory-row">
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                        <InventorySlot />
-                    </ui:VisualElement>
+            <ui:VisualElement name="SlotContainer" class="slot-container" style="flex-direction: row;">
+                <ui:VisualElement name="ArmorSlotsContainer" style="flex-grow: 0; flex-shrink: 0;">
+                    <InventorySlot name="InventorySlot" />
+                    <InventorySlot name="InventorySlot" />
+                    <InventorySlot name="InventorySlot" />
+                    <InventorySlot name="InventorySlot" />
                 </ui:VisualElement>
-                <ui:VisualElement name="InventoryRow" class="hotbar-row">
-                    <InventorySlot style="margin-top: 5px;" />
-                    <InventorySlot />
-                    <InventorySlot />
-                    <InventorySlot />
-                    <InventorySlot />
-                    <InventorySlot />
-                    <InventorySlot />
-                    <InventorySlot />
-                    <InventorySlot />
+                <ui:VisualElement name="InventorySlotsContainer" style="flex-grow: 1; flex-shrink: 1; padding-top: 5px; padding-right: 5px; padding-bottom: 5px; padding-left: 5px;">
+                    <ui:VisualElement name="InventoryRowContainer" class="inventory-row-container">
+                        <ui:VisualElement name="InventoryRow" class="inventory-row">
+                            <InventorySlot name="InventorySlot" />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                        </ui:VisualElement>
+                        <ui:VisualElement name="InventoryRow" class="inventory-row">
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                        </ui:VisualElement>
+                        <ui:VisualElement name="InventoryRow" class="inventory-row">
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                            <InventorySlot />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
+                    <ui:VisualElement name="InventoryRow" class="hotbar-row">
+                        <InventorySlot style="margin-top: 5px;" />
+                        <InventorySlot />
+                        <InventorySlot />
+                        <InventorySlot />
+                        <InventorySlot />
+                        <InventorySlot />
+                        <InventorySlot />
+                        <InventorySlot />
+                        <InventorySlot />
+                    </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
