--- a/Lornworld2/Assets/UI/Inventory/Inventory.uxml
+++ b/Lornworld2/Assets/UI/Inventory/Inventory.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Inventory/Inventory.uss?fileID=7433441132597879392&amp;guid=eedb7afe2cbadb24b89e9d7958849d45&amp;type=3#Inventory" />
-    <ui:VisualElement name="Panel" class="panel" style="display: flex;">
+    <ui:VisualElement name="Panel" class="panel" style="display: none;">
         <ui:VisualElement name="Inventory" class="inventory">
             <ui:Label text="Inventory" class="label" />
             <ui:VisualElement name="SlotContainer" class="slot-container" style="flex-direction: row;">
